# masna3

./: .dockerignore  .gitignore  .hlint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cabal.project  cabal.project.freeze  compose.yml  database.env  environment.ci.sh  environment.sh  environment.test.sh
.github/workflows/: backend.yml  style.yml
api/: masna3-api.cabal
api/src/Masna3/: Api.hs
api/src/Masna3/Api/: Client.hs  File.hs  Process.hs
api/src/Masna3/Api/ArchivedFile/: ArchivedFileId.hs
api/src/Masna3/Api/ArchivedProcess/: ArchivedProcessId.hs
api/src/Masna3/Api/File/: FileId.hs  Types.hs
api/src/Masna3/Api/Owner/: OwnerId.hs
api/src/Masna3/Api/Process/: ProcessId.hs
api/src/Masna3/Api/ProcessFile/: ProcessFileId.hs
api/src/Masna3/Api/Types/: File.hs
background-jobs/: background-jobs.cabal
background-jobs/src/BackgroundJobs/: Job.hs  Poller.hs  Queue.hs  Worker.hs
background-jobs/test/: Main.hs
background-jobs/test/BackgroundJobs/Test/: Utils.hs
docs/: ARCHITECTURE.md  README.md  file-download.mmd  file-upload.mmd
masna3-jobs/: masna3-jobs.cabal
masna3-jobs/src/Masna3/Jobs/: Job.hs  Poller.hs  Queue.hs  Worker.hs
masna3-jobs/test/: Main.hs
masna3-jobs/test/Masna3/Jobs/Test/: Utils.hs
masna3-prelude/: masna3-prelude.cabal
masna3_web_client/: README.md  gleam.toml  manifest.toml
masna3_web_client/src/: config.gleam  masna3_web_client.gleam  router.gleam  types.gleam  update.gleam  validation.gleam
masna3_web_client/src/components/: error.gleam  navbar.gleam  rsvp_error.gleam  validation_error.gleam
masna3_web_client/src/domain/: confirm_file.gleam  delete_file.gleam  register_file.gleam
masna3_web_client/src/domain/file/: delete_file.gleam  register_file.gleam
masna3_web_client/src/domain/process/: cancel_process.gleam  complete_process.gleam  register_process.gleam
masna3_web_client/src/types/: domain.gleam  model.gleam  msg.gleam  route.gleam
masna3_web_client/src/utils/: uuid.gleam
masna3_web_client/src/views/: index.gleam  not_found.gleam  register_file.gleam
masna3_web_client/src/views/file/: confirm_file.gleam  delete_file.gleam  register_file.gleam
masna3_web_client/src/views/process/: cancel_process.gleam  complete_process.gleam  register_process.gleam
masna3_web_client/test/: validation_test.gleam
masna3_web_client/test/domain/: confirm_file_test.gleam  delete_file_test.gleam  register_file_test.gleam
masna3_web_client/test/domain/file/: delete_file_test.gleam  register_file_test.gleam
masna3_web_client/test/domain/process/: cancel_process_test.gleam  complete_process_test.gleam  register_process_test.gleam
migrations/: 20250803085138_create_owners.sql  20250803085921_create_processes.sql  20250803085922_create_files.sql  20250803093709_create_archived_files.sql  20260310161916_create_processes.sql  20260310161933_create_process_files.sql  20260414094107_create_archived_processes.sql
scripts/: init.sh  run-tests.sh
server/: masna3.cabal
server/app/: Main.hs
server/prelude/: Prelude.hs
server/src/Masna3/: Config.hs  Server.hs
server/src/Masna3/Server/: Config.hs  Database.hs  Effects.hs  Environment.hs  Error.hs  File.hs  Guards.hs  Process.hs
server/src/Masna3/Server/AWS/: URL.hs
server/src/Masna3/Server/File/: Guards.hs  Handler.hs
server/src/Masna3/Server/Jobs/: Types.hs
server/src/Masna3/Server/Model/File/: Query.hs  Types.hs  Update.hs
server/src/Masna3/Server/Model/Owner/: Query.hs  Types.hs  Update.hs
server/src/Masna3/Server/Model/Process/: Query.hs  Types.hs  Update.hs
server/src/Masna3/Server/Model/ProcessFile/: Query.hs  Types.hs  Update.hs
server/src/Masna3/Server/Owner/: Guards.hs
server/src/Masna3/Server/Process/: Guards.hs  Handler.hs
server/test/: Main.hs
server/test/Masna3/Test/: File.hs  Process.hs  Utils.hs
