cabal-version: 3.12
name: masna3-api
version: 0.1.0.0
synopsis: File Storage Proxy (API types)
license: LGPL-3.0-only
license-file: ../LICENSE
author: Théophile Choutri de Tarlé
maintainer: The Masna3 Contributors
build-type: Simple
extra-doc-files: ../CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/tchoutri/masna3

common common-extensions
  default-extensions:
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common common-ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -funbox-small-strict-fields
    -Winvalid-haddock

library
  import: common-extensions
  import: common-ghc-options
  -- cabal-gild: discover src
  exposed-modules:
    Masna3.Api
    Masna3.Api.ArchivedFile.ArchivedFileId
    Masna3.Api.Client
    Masna3.Api.File
    Masna3.Api.File.FileId
    Masna3.Api.Owner.OwnerId

  build-depends:
    aeson,
    amazonka,
    amazonka-s3,
    base >=4.20 && <4.21,
    biscuit-haskell,
    biscuit-servant,
    bytestring,
    deriving-aeson,
    heptapod,
    postgresql-simple,
    servant,
    servant-client,
    text,
    text-display,
    uuid-types,

  hs-source-dirs: src
  default-language: GHC2024
