cabal-version: 3.12
name: background-jobs
version: 0.1.0.0
synopsis: Background jobs for Masnaع
license: LGPL-3.0-only
license-file: ../LICENSE
author: Théophile Choutri de Tarlé
maintainer: The Masnaع Contributors
build-type: Simple
extra-doc-files: ../CHANGELOG.md
tested-with: ghc ==9.10.3

source-repository head
  type: git
  location: https://github.com/tchoutri/masna3
  subdir: jobs

common extensions
  default-extensions:
    DeepSubsumption
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -Wno-unticked-promoted-constructors
    -funbox-small-strict-fields
    -Winvalid-haddock

common rts-options
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -T"

library
  import: extensions
  import: ghc-options
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    BackgroundJobs.Job
    BackgroundJobs.Poller
    BackgroundJobs.Queue
    BackgroundJobs.Worker

  build-depends:
    aeson,
    base >=4.20 && <4.21,
    bytestring,
    containers,
    deriving-aeson,
    effectful,
    effectful-core,
    effectful-postgresql,
    envparse,
    heptapod,
    log-base,
    log-effectful,
    masna3-prelude,
    monad-time-effectful,
    pg-entity,
    poolboy,
    effectful-poolboy,
    postgresql-simple,
    prometheus-client,
    resource-pool,
    servant,
    servant-server,
    text,
    time,
    uuid-types,

  mixins:
    base hiding (Prelude),
    masna3-prelude (Prelude),

executable jobs-server
  import: extensions
  import: ghc-options
  import: rts-options
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    background-jobs,
    base,
    effectful,
    log-base,
    masna3-prelude,

  mixins:
    base hiding (Prelude),
    masna3-prelude (Prelude),

test-suite background-jobs-test
  import: extensions
  import: ghc-options
  import: rts-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  -- cabal-gild: discover test --exclude "test/Main.hs"
  other-modules: BackgroundJobs.Test.Utils
  build-depends:
    aeson,
    background-jobs,
    base,
    binary,
    bytestring,
    containers,
    deriving-aeson,
    effectful,
    effectful-core,
    effectful-postgresql,
    envparse,
    http-client,
    http-types,
    log-base,
    log-effectful,
    masna3-prelude,
    monad-time-effectful,
    postgresql-simple,
    resource-pool,
    sel,
    servant-client,
    strict-mutable-base,
    tasty,
    tasty-hunit,
    text,
    text-display,
    time,
    wai-log,
    warp,

  mixins:
    base hiding (Prelude),
    masna3-prelude (Prelude),
