cabal-version: 3.12
name: masna3-jobs
version: 0.1.0.0
synopsis: Background jobs for Masna3
license: LGPL-3.0-only
license-file: ../LICENSE
author: Théophile Choutri de Tarlé
maintainer: The Masna3 Contributors
build-type: Simple
extra-doc-files: ../CHANGELOG.md
tested-with: ghc ==9.10.2

source-repository head
  type: git
  location: https://github.com/tchoutri/masna3
  subdir: jobs

common extensions
  default-extensions:
    DeepSubsumption
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -Wno-unticked-promoted-constructors
    -funbox-small-strict-fields
    -Winvalid-haddock

common rts-options
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -T"

library
  import: extensions
  import: ghc-options
  -- cabal-gild: discover src
  exposed-modules:
    Masna3.Jobs.Job
    Masna3.Jobs.Worker

  build-depends:
    aeson,
    base >=4.20 && <4.21,
    bytestring,
    containers,
    deriving-aeson,
    effectful,
    effectful-core,
    effectful-postgresql,
    envparse,
    heptapod,
    log-base,
    log-effectful,
    masna3-prelude,
    monad-time-effectful,
    pg-entity,
    postgresql-simple,
    resource-pool,
    servant,
    servant-server,
    text,
    time,
    uuid-types,

  mixins:
    base hiding (Prelude),
    masna3-prelude (Prelude),

  hs-source-dirs: src
