cabal-version: 3.12
name: masna3-prelude
version: 0.1.0.0
synopsis: Custom prelude for the Masna3 project
license: LGPL-3.0-only
license-file: ../LICENSE
author: Théophile Choutri de Tarlé
maintainer: The Masna3 Contributors
build-type: Simple
extra-doc-files: ../CHANGELOG.md
tested-with: ghc ==9.10.2

source-repository head
  type: git
  location: https://github.com/tchoutri/masna3
  subdir: masna3-prelude

common extensions
  default-extensions:
    DeepSubsumption
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -Wno-unticked-promoted-constructors
    -funbox-small-strict-fields
    -Winvalid-haddock

library
  import: extensions
  import: ghc-options
  exposed-modules: Prelude
  hs-source-dirs: src
  build-depends:
    base,
    text,
    text-display,
    vector,
