cabal-version: 3.12
name: masna3
version: 0.1.0.0
synopsis: File Storage Proxy
license: LGPL-3.0-only
license-file: LICENSE
author: Théophile Choutri de Tarlé
maintainer: The Masna3 Contributors
build-type: Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/tchoutri/masna3

common common-extensions
  default-extensions:
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    NoStarIsType
    DeepSubsumption
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common common-ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -funbox-small-strict-fields

library
  import: common-extensions
  import: common-ghc-options
  -- cabal-gild: discover src
  exposed-modules: Masna3.Server
  build-depends:
    base >=4.20 && <4.21,
    biscuit-haskell,
    biscuit-servant,
    bytestring,
    effectful,
    effectful-core,
    heptapod,
    resource-pool,
    servant,
    servant-server,
    uuid-types,

  hs-source-dirs: src
  default-language: GHC2024
