cabal-version: 3.12
name: masna3
version: 0.1.0.0
synopsis: File Storage Proxy
license: LGPL-3.0-only
license-file: ../LICENSE
author: Théophile Choutri de Tarlé
maintainer: The Masna3 Contributors
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with: ghc ==9.10.1

source-repository head
  type: git
  location: https://github.com/tchoutri/masna3

common extensions
  default-extensions:
    DeepSubsumption
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -Wno-unticked-promoted-constructors
    -funbox-small-strict-fields

common rts-options
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -T"

library
  import: extensions
  import: ghc-options
  -- cabal-gild: discover src
  exposed-modules:
    Masna3.Config
    Masna3.Server
    Masna3.Server.Config
    Masna3.Server.Environment
    Masna3.Server.File

  build-depends:
    base >=4.20 && <4.21,
    biscuit-haskell,
    biscuit-servant,
    bytestring,
    effectful,
    effectful-core,
    envparse,
    heptapod,
    log-base,
    log-effectful,
    masna3-api,
    monad-time-effectful,
    network,
    postgresql-simple,
    resource-pool,
    servant,
    servant-server,
    text,
    text-display,
    time,
    uuid-types,
    wai,
    wai-log,
    warp,

  hs-source-dirs: src
  default-language: GHC2024

executable masna3-server
  import: extensions
  import: ghc-options
  import: rts-options
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    effectful,
    log-base,
    masna3,
