cabal-version: 3.12
name: masna3
version: 0.1.0.0
synopsis: File Storage Proxy
license: LGPL-3.0-only
license-file: ../LICENSE
author: Théophile Choutri de Tarlé
maintainer: The Masna Contributors
build-type: Simple
extra-doc-files: ../CHANGELOG.md
tested-with: ghc ==9.10.3

source-repository head
  type: git
  location: https://github.com/tchoutri/masna3

common extensions
  default-extensions:
    DeepSubsumption
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -Wno-unticked-promoted-constructors
    -funbox-small-strict-fields
    -Winvalid-haddock

common rts-options
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -T"

library
  import: extensions
  import: ghc-options
  -- cabal-gild: discover src
  exposed-modules:
    Masna3.Server
    Masna3.Server.AWS.URL
    Masna3.Server.Config
    Masna3.Server.Database
    Masna3.Server.Effects
    Masna3.Server.Environment
    Masna3.Server.Error
    Masna3.Server.File
    Masna3.Server.Jobs.Types
    Masna3.Server.Model.File.Query
    Masna3.Server.Model.File.Types
    Masna3.Server.Model.File.Update
    Masna3.Server.Model.Owner.Query
    Masna3.Server.Model.Owner.Types
    Masna3.Server.Model.Owner.Update

  build-depends:
    aeson,
    amazonka,
    amazonka-s3,
    background-jobs,
    base >=4.20 && <4.21,
    biscuit-haskell,
    biscuit-servant,
    bytestring,
    containers,
    deriving-aeson,
    effectful,
    effectful-core,
    effectful-postgresql,
    envparse,
    log-base,
    log-effectful,
    masna3-api,
    masna3-prelude,
    monad-time-effectful,
    network,
    pg-entity,
    postgresql-simple,
    resource-pool,
    servant,
    servant-server,
    text,
    time,
    wai-log,
    wai-cors,
    http-types,
    warp,

  mixins:
    base hiding (Prelude),
    masna3-prelude (Prelude),

  hs-source-dirs: src

executable masna3-server
  import: extensions
  import: ghc-options
  import: rts-options
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    aeson,
    background-jobs,
    base,
    containers,
    effectful,
    effectful-postgresql,
    log-base,
    log-effectful,
    masna3,
    masna3-prelude,
    monad-time-effectful,
    optics-core,
    text,

  mixins:
    base hiding (Prelude),
    masna3-prelude (Prelude),

test-suite masna3-test
  import: extensions
  import: ghc-options
  import: rts-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  -- cabal-gild: discover test --exclude "test/Main.hs"
  other-modules:
    Masna3.Test.File
    Masna3.Test.Utils

  build-depends:
    aeson,
    background-jobs,
    base,
    bytestring,
    containers,
    effectful,
    effectful-core,
    effectful-postgresql,
    envparse,
    http-client,
    http-types,
    log-base,
    log-effectful,
    masna3,
    masna3-api,
    masna3-prelude,
    monad-time-effectful,
    postgresql-simple,
    sel,
    servant-client,
    strict-mutable-base,
    tasty,
    tasty-hunit,
    text,
    text-display,
    time,
    wai-log,
    warp,

  mixins:
    base hiding (Prelude),
    masna3-prelude (Prelude),
